--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,18 @@ body{
     background-color: black;
     min-width: 1080px;
     width: 100%;
+
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 #navbarContainer{
     min-width: 1080px;
     width: 100%;
     height: fit-content;
-    padding: 20px 0;
+    padding: 12px 0;
     background-color: rgba(0, 0, 0, 0.15);
     position: fixed;
     z-index: 9999;
@@ -47,7 +52,7 @@ body{
     right: 0px;
     padding: 5px 0; */
     display: flex;
-    padding-top: 5px;
+
     margin-right: 100px;
 }
 
@@ -56,12 +61,12 @@ body{
     display: inline-block;
     font-family: Montserrat;
     font-style: normal;
-    font-weight: 600;
-    font-size: 25px;
+ 
+    font-size: 22px;
     line-height: 44px;
     /* identical to box height */
     color: white;
-    margin: 0 15px;
+    margin: 0 8px;
 
     font-family: 'Montserrat', sans-serif;
 }
@@ -74,7 +79,7 @@ body{
 
 .sectionContainer{
     width: 100%;
-    height: 900px;
+    height: 750px;
     opacity: 0.5;
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -85,15 +90,15 @@ body{
     background-image: url("../resources/backgrounds/home.jpg");
     background-position: center;
     background-size: cover;
-
 }
 
 #homeContent{
     position: absolute;
     display: flex;
     flex-direction: column;
-    top: 250px;
-    left: 200px;
+    top: 220px;
+    left: 50%;
+    margin-left: -500px;
     
 }
 
@@ -111,7 +116,7 @@ body{
 #homeContent #title{
     color: #F6C214;
     font-weight: bold;
-    font-size: 60px;
+    font-size: 50px;
     width: fit-content;
     height: fit-content;
     margin: 0 auto;
@@ -122,45 +127,49 @@ body{
     color: white;
     width: fit-content;
     height: fit-content;
-    font-size: 30px;
+    font-size: 25px;
     margin: 0 auto;
 }
 
 .titleMain{
     color: #F6C214;
     font-weight: bold;
-    font-size: 60px;
+    font-size: 50px;
     width: fit-content;
     height: fit-content;
     position: absolute;
     top: 100px;
     
     left: 50%;
-    margin-left: -150px;
+    margin-left: -115px;
 }
 
 #aboutusContainer{
     background-image: url("../resources/backgrounds/about\ us.jfif");
     background-position: top;
-    height: 850px;
+    height: 700px;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 #aboutusContent{
     color: white;
-    width: 1200px;
-    font-size: 30px;
+    width: 800px;
+    font-size: 20px;
     text-align: center;
 
     position: absolute;
     left: 50%;
-    margin-left: -600px;
-    top: 330px;
+    margin-left: -400px;
+    top: 230px;
 }
 
 #aboutusContent #desc{
-    margin-top: 100px;
+    margin-top: 60px;
+}
+
+#workContainer{
+    margin-bottom: 20px;
 }
 
 #workContent{
@@ -170,7 +179,7 @@ body{
 }
 
 .flex1{
-    height: 550px;
+    height: 450px;
     display: flex;
     flex-direction: row;
     overflow: hidden;
@@ -187,10 +196,22 @@ body{
 .flex2 div{
     height: 50%;
     overflow: hidden;
+    
 }
 
 .flag{
     margin-bottom: 10px;
+    vertical-align: bottom;
+}
+
+
+
+.flag2{
+    position: relative;
+}
+.flag2 img{
+    position: absolute;
+    bottom: 0;
 }
 
 /* 
@@ -208,16 +229,19 @@ body{
 #contactusContainer{
     opacity: 0.75;
     background-image: url(../resources/backgrounds/contact\ us.jpg);
-    background-position: bottom;
-    height: 800px;
+    background-position: center;
+    height: 650px;
     background-size: cover;
 }
 
 #contactusContent{
     color: white;
-    top: 250px;
+    top: 230px;
     position: absolute;
-    width: 100%;
+    width: 1080px;
+
+    left: 50%;
+    margin-left: -500px;
 }
 
 .form{
@@ -234,8 +258,8 @@ body{
     
     width: fit-content;
     background-color: rgba(255, 255, 255, 0.85);
-    border-radius: 20px;
-    padding: 30px;
+    border-radius: 15px;
+    padding: 20px;
     padding-bottom: 15px;
     height: fit-content;
     color: black;
@@ -247,29 +271,27 @@ input{
     box-sizing: border-box; 
     background: #C4C4C4;
     padding-left: 5px;
-    font-size: 20px;
+    font-size: 17px;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
 }
 
 #nname, #eemail, #pphone{
-    height: 50px;
-    width: 500px;
+    height: 30px;
+    width: 400px;
     /* margin: 0 auto; */
 
 }
 
 #mmessage{
     height: 150px;
-    width: 500px;
+    width: 400px;
     line-height: 0;
     /* margin: 0 auto; */
     border: 2px solid rgba(0, 0, 0, 0.25);
     box-sizing: border-box; 
     background: #C4C4C4;
-    font-size: 20px;
+    font-size: 17px;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
     vertical-align: top;
     line-height: 1.2em;
     padding-left: 5px;
@@ -278,15 +300,15 @@ input{
 }
 
 #button{
-    height: 40px;
-    width: 150px;
+    height: 35px;
+    width: 130px;
     outline: none;
     border: none;
     background-color: #F6C214;
     color: black;
     border-radius: 50px;
-    font-size: 20px;
-    font-weight: 600;
+    font-size: 17px;
+    font-weight: 700;
     margin-top: 10px;
     cursor: pointer;
 }
@@ -294,10 +316,10 @@ input{
 #footer{
     width: 100%;
     background-color: black;
-    margin-top: 10px;
+    margin-top: 5px;
     padding-top: 20px;
     font-weight: 100;
-    font-size: 20px;
+    font-size: 15px;
     color: white;
 }
 
@@ -310,11 +332,11 @@ input{
 #designContent{
     display: flex;
     flex-direction: row;
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 600;
     color:  #F6C214;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 #designContent div{
@@ -322,7 +344,7 @@ input{
 }
 
 #createdContent{
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 #copyright{
