--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+
 *
 {
     margin: 0;
@@ -5,6 +7,7 @@
     text-decoration: none;
     color: inherit;
 }
+
 
 html {
     scroll-behavior: smooth;
@@ -16,17 +19,13 @@ body{
     min-width: 1080px;
     width: 100%;
 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
 }
 
 #navbarContainer{
     min-width: 1080px;
     width: 100%;
     height: fit-content;
-    padding: 12px 0;
+    
     background-color: rgba(0, 0, 0, 0.15);
     position: fixed;
     z-index: 9999;
@@ -44,7 +43,7 @@ body{
     animation-duration: 5000ms;
     animation-iteration-count: infinite;
     animation-timing-function: linear; 
-
+    padding: 12px 0px;
 }
 
 #navbarContainer #list{
@@ -52,7 +51,6 @@ body{
     right: 0px;
     padding: 5px 0; */
     display: flex;
-
     margin-right: 100px;
 }
 
@@ -66,9 +64,13 @@ body{
     line-height: 44px;
     /* identical to box height */
     color: white;
-    margin: 0 8px;
+    padding: 12px 8px;
 
     font-family: 'Montserrat', sans-serif;
+}
+
+#navbarContainer li:hover{
+    background-color: rgba(0, 0, 0, 0.25);
 }
 
 
@@ -79,7 +81,7 @@ body{
 
 .sectionContainer{
     width: 100%;
-    height: 750px;
+    height: 700px;
     opacity: 0.5;
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -91,6 +93,19 @@ body{
     background-position: center;
     background-size: cover;
 }
+
+/* #homeContainer{
+    height: 750px;
+    object-fit: cover;
+    object-position: 50% 50%;
+    /* position: relative; */
+/* } */ 
+
+/* #homeContainer img{
+    position: absolute;
+    top: -100px;
+} */
+
 
 #homeContent{
     position: absolute;
@@ -169,7 +184,7 @@ body{
 }
 
 #workContainer{
-    margin-bottom: 20px;
+    margin-bottom: 100px;
 }
 
 #workContent{
@@ -367,9 +382,15 @@ input{
     to {transform:rotate(360deg);}
 }
 
-@media only screen and (max-width: 375px) {
-    body {
-      width: 375px;
+
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3) { 
+
+    body{
+        width: 100%;
+        color: black;
     }
 
-}    
+} 
