--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@ body{
 }
 
 #navbarContainer{
-    min-width: 1080px;
     width: 100%;
     height: fit-content;
     
@@ -37,7 +36,7 @@ body{
     justify-content: space-between;
 }
 
-#navbarContainer #icon{
+#navbarContainer img{
     margin-left: 100px;
     animation-name: spin;
     animation-duration: 5000ms;
@@ -52,6 +51,10 @@ body{
     padding: 5px 0; */
     display: flex;
     margin-right: 100px;
+}
+
+#menuContainer{
+    display: none;
 }
 
 #navbarContainer li{
@@ -150,13 +153,11 @@ body{
     color: #F6C214;
     font-weight: bold;
     font-size: 50px;
-    width: fit-content;
+    width: 100%;
     height: fit-content;
     position: absolute;
     top: 100px;
-    
-    left: 50%;
-    margin-left: -115px;
+    text-align: center;
 }
 
 #aboutusContainer{
@@ -253,10 +254,9 @@ body{
     color: white;
     top: 230px;
     position: absolute;
-    width: 1080px;
+    width: 100%;
 
-    left: 50%;
-    margin-left: -500px;
+    left: auto;
 }
 
 .form{
@@ -271,7 +271,7 @@ body{
     flex-direction: column;
     align-items: center;
     
-    width: fit-content;
+    width: max-content;
     background-color: rgba(255, 255, 255, 0.85);
     border-radius: 15px;
     padding: 20px;
@@ -383,14 +383,3 @@ input{
 }
 
 
-@media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 812px) 
-  and (-webkit-min-device-pixel-ratio: 3) { 
-
-    body{
-        width: 100%;
-        color: black;
-    }
-
-} 
